# Accelerapp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AIRGAP_FEATURES.md  ARCHITECTURE.md  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  CYD_INTEGRATION_SUMMARY.md  DEMO.md  DEPLOYMENT.md  DIGITAL_TWIN_FEATURES.md  DIGITAL_TWIN_IMPLEMENTATION_SUMMARY.md  ENHANCED_HARDWARE_SUPPORT.md  ESP32_CAM_IMPLEMENTATION_SUMMARY.md  HARDWARE_GENERATION.md  HARDWARE_INTEGRATION_SUMMARY.md  HARDWARE_RECOMMENDATIONS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MESHTASTIC_INTEGRATION.md  MESHTASTIC_QUICK_START.md  OBSERVABILITY_IMPLEMENTATION.md  PHASE1_INFRASTRUCTURE_SUMMARY.md  PHASE2_INFRASTRUCTURE.md  PHASE2_SUMMARY.md  PHASE3_DEPLOYMENT_SUMMARY.md  PHASE3_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PHASE5_IMPLEMENTATION.md  PHASE6_IMPLEMENTATION.md  PREDICTIVE_MAINTENANCE_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  TESTING.md  TESTING_INFRASTRUCTURE_SUMMARY.md  TINYML_FEATURES.md  (+10 more)
.github/: TESTING_QUICKSTART.md
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
config/: hardware_devices.yaml  logging_config.yaml  monitoring_config.yaml  performance_config.yaml  service_config.yaml
config/airgap/: README.md  settings.yaml
deployment/: README.md
deployment/docker/: Dockerfile  Dockerfile.monitoring  docker-compose.yml
deployment/helm/accelerapp/: Chart.yaml  README.md  values.yaml
deployment/install/: install-airgap.sh
deployment/kubernetes/: accelerapp-deployment.yaml
deployment/monitoring/: health_check.py  monitor.py
deployment/observability/: README.md  docker-compose.yml
docs/: API_TINYML.md  ARCHITECTURE.md  CONFIGURATION.md  COST_OPTIMIZATION.md  ESP32_CAM_GUIDE.md  ESP32_CAM_INTEGRATION.md  ESP32_CAM_QUICK_REFERENCE.md  GETTING_STARTED.md  M5STACK_GUIDE.md  MESHTASTIC_QUICKSTART.md  OPERATIONAL_PROCEDURES.md  OPERATIONS.md  PERFORMANCE_TUNING.md  PHASE3_FEATURES.md  PHASE4_FEATURES.md  PHASE5_FEATURES.md  PREDICTIVE_MAINTENANCE.md  TINYML_INTEGRATION.md  TINYML_QUICK_REFERENCE.md  UPGRADE_GUIDE.md  V0.2.0_FEATURES.md  V0.3.0_FEATURES.md  WILDCAM_INTEGRATION.md  ZERO_TRUST_ARCHITECTURE.md  ZERO_TRUST_QUICKSTART.md
docs/hardware/: README.md  quick_start.md  security.md
examples/: arduino_led.yaml  cyd_demo.py  digital_twin_demo.py  digital_twin_hardware_integration.py  enhanced_hardware_demo.py  esp32_cam_demo.py  esp32_wifi_sensor.yaml  hardware_integration_demo.py  infrastructure_example.py  m5stack_basic.yaml  m5stack_iot_dashboard.yaml  m5stack_remote_control.yaml  m5stack_wifi_sensor.yaml  meshtastic_demo.py  meshtastic_digital_twin_integration.py  meshtastic_node.yaml  motor_controller.yaml  multi_platform_led.yaml  observability_demo.py  phase2_demo.py  phase2_integration.py  phase3_demo.py  phase5_security_demo.py  platform_demo.py  predictive_maintenance_demo.py  sensor_array.yaml  smart_doorbell_tinyml.py  tinyml_demo.py  v0.2.0_features_demo.py  v0.3.0_demo.py  wildcam_hardware_demo.py  zero_trust_demo.py
examples/airgap/: airgap_demo.py
infrastructure/: .gitignore  QUICK_START.md  README.md
infrastructure/docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  MULTI_ACCOUNT_SETUP.md
infrastructure/scripts/: bootstrap.sh  validate.sh
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
src/accelerapp/: __init__.py  cli.py  core.py
src/accelerapp/agents/: __init__.py  (+10 more)
tests/: __init__.py  conftest.py  test_agents.py  test_ai_module.py  test_api.py  test_camera.py  test_cloud.py  test_communication.py  test_core.py  test_cyd.py  test_deployment_infrastructure.py  test_digital_twin.py  test_economics.py  test_enhanced_platforms.py  test_enterprise.py  test_environmental.py  test_esp32_cam.py  test_esp32_marauder.py  test_firmware_ml_integration.py  test_flipper_zero.py  test_generators.py  test_hardware.py  test_hardware_design.py  test_hardware_manager.py  test_hil.py  test_infrastructure.py  test_knowledge.py  test_llm.py  test_m5stack_platform.py  test_marketplace.py  test_meshtastic.py  test_new_agents.py  test_observability.py  test_optimization_agents.py  test_peripherals_advanced.py  test_phase2_core.py  test_phase2_monitoring.py  test_phase2_plugins.py  test_phase2_services.py  test_phase2_utils.py  (+15 more)
(+312 files in other folders)
